<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_announcement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flattomate.Announcement.CreateAnnouncementActivity">

    <!-- TOOLBAR -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/create_announcement_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/primary"
        android:titleTextColor="#FFFFFF"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Announcement info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_img_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    style="@style/card">

                    <TextView
                        android:text="@string/lbl_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lbl_img"
                        android:padding="5dp" />

                    <LinearLayout
                        android:paddingLeft="5dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/gridview_imgs"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/img_1"
                                android:layout_width="80dp"
                                android:layout_height="80dp" />
                            <ImageView
                                android:id="@+id/img_2"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="5dp"/>
                            <ImageView
                                android:id="@+id/img_3"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="5dp"/>
                            <ImageView
                                android:id="@+id/img_4"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="5dp"/>
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_ad_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    style="@style/card"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:ems="10"
                            android:id="@+id/et_title"
                            android:hint="@string/hint_title" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:ems="10"
                            android:id="@+id/et_price"
                            android:hint="@string/hint_price" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:ems="10"
                            android:id="@+id/et_address"
                            android:hint="@string/hint_address" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:ems="10"
                            android:id="@+id/et_description"
                            android:hint="@string/hint_description" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:ems="10"
                            android:maxLength="10"
                            android:hint="Fecha disponibilidad"
                            android:id="@+id/et_availability"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_ad_extra_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                style="@style/card"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <!-- Bed type -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_bed"/>
                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton android:id="@+id/radio_single_bed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_single_bed"
                                android:onClick="onRadioButtonClicked"/>
                            <RadioButton android:id="@+id/radio_double_bed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_double_bed"
                                android:onClick="onRadioButtonClicked"/>
                        </RadioGroup>
                    </LinearLayout>

                    <!-- Room type -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_room"/>
                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton android:id="@+id/radio_single_room"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_single_room"
                                android:onClick="onRadioButtonClicked"/>
                            <RadioButton android:id="@+id/radio_shared_room"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_shared_room"
                                android:onClick="onRadioButtonClicked"/>
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_ad_rent_kind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                style="@style/card"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <!-- Rent type -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_rent"/>

                        <Spinner
                            android:id="@+id/rent_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!-- Rent MIN stay-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_min_stay"/>

                        <EditText
                            android:id="@+id/et_min_stay"
                            android:layout_marginLeft="15dp"
                            android:inputType="number"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!-- Rent MAX stay-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_max_stay"/>

                        <EditText
                            android:id="@+id/et_max_stay"
                            android:layout_marginLeft="15dp"
                            android:inputType="number"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_ad_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            style="@style/card"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_extra"/>

                <com.flattomate.ExpandableHeightGridView
                    android:numColumns="2"
                    android:paddingLeft="5dp"
                    android:gravity="center"
                    android:columnWidth="50dp"
                    android:stretchMode="columnWidth"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/gridview_extra_info"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
